...
    <string name="error_adding_meal_plan">Error adding meal plan: %1$s</string>
    <string name="error_updating_meal_plan">Error updating meal plan: %1$s</string>
    <string name="error_deleting_meal_plan">Error deleting meal plan: %1$s</string>

    <!-- String arrays -->
    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <string-array name="meal_types">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>
</resources>
